feat: add comment feature to student
